--- a/guthaben.html
+++ b/guthaben.html
@@ -54,13 +54,13 @@
                         <h4 class="text-center">Menü</h4>
                         <ul class="mailbox-list">
                            <li>
-                              <a href="#"><i class="fa fa-user-circle-o"></i> Persönliche Daten</a>
+                              <a href="profil.html"><i class="fa fa-user-circle-o"></i> Persönliche Daten</a>
                            </li>
                            <li class="active">
-                              <a href="#"><i class="fa fa-database"></i> Guthaben</a>
+                              <a href="guthaben.html"><i class="fa fa-database"></i> Guthaben</a>
                            </li>
                            <li>
-                              <a href="#"><i class="fa fa-history"></i> Parkverlauf</a>
+                              <a href="parkverlauf.html"><i class="fa fa-history"></i> Parkverlauf</a>
                            </li>
                         </ul>
                      </div>
