--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         Monatstarif
                      </li>
                      <li class="pricing-desc">
-                        auf Anfrage-NFC Chip €2,70
+                        auf Anfrage
                      </li>
                      <li class="pricing-title">
                         <a class="btn btn-primary" href="#">Kontakt</a>
@@ -243,12 +243,11 @@
          <div class="container">
             <div class="row">
                <div class="col-md-9">
-                  <h2><span class="text-success">Special icons </span>for your app</h2>
+                  <h2><span class="text-success">NFC </span>Chip</h2>
                   <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
                </div>
-               <div class="col-md-3 m-t">
-                  <a href="https://itunes.apple.com/at/app/payuca-smart-parking/id1064020147?l=en&mt=8" style="margin-right: 1%;"><img src="images/landing/app-store-badge.png" alt="iOS App Download" /></a>
-                  <a href="https://play.google.com/store/apps/details?id=com.payuca.android&hl=en"><img src="images/landing/google-play-badge.png" alt="Android App Download" /></a>
+               <div class="col-md-3 m-t pull-right">
+                  <a class="btn btn-primary btn-lg btn-outline pull-right" href="#">Kontakt</a>
                </div>
             </div>
          </div>
@@ -409,7 +408,7 @@
                      </div>
                      <div class="form-group">
                         <div class="col-sm-12">
-                           <input id="submit" name="submit" type="submit" value="Send us a message" class="btn btn-success">
+                           <input id="submit" name="submit" type="submit" value="Send us a message" class="btn btn-success pull-right">
                         </div>
                      </div>
                   </form>
