--- a/login.html
+++ b/login.html
@@ -157,7 +157,7 @@
                      </div>
                      <div class="form-group">
                         <div class="col-sm-12">
-                           <input id="submit" name="submit" type="submit" value="Send us a message" class="btn btn-success">
+                           <input id="submit" name="submit" type="submit" value="Send us a message" class="btn btn-success pull-right">
                         </div>
                      </div>
                   </form>
