--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
                                  <input type="checkbox" class="i-checks" checked>
                                  Angemeldet bleiben
                               </div>
-                              <button class="btn btn-success btn-block m-t-lg">Anmelden</button>
+                              <a class="btn btn-success btn-block m-t-lg" href="profil.html">Anmelden</a>
                               <a class="btn btn-default btn-block m-b-md" href="register.html">Registrieren</a>
                               <center>
                                  <a href="recovery.html" title="Password recovery">Passwort vergessen?</a>
