Panel animations added.

--- a/login.html
+++ b/login.html
@@ -50,11 +50,11 @@
             <div class="login-container">
                <div class="row">
                   <div class="col-md-12">
-                     <div class="text-center m-b-md">
+                     <div class="text-center m-b-md animated-panel zoomIn">
                         <h3>PAYUCA LOG IN</h3>
                         <small>Smart Parking</small>
                      </div>
-                     <div class="hpanel m-b-xl">
+                     <div class="hpanel animated-panel zoomIn m-b-xl">
                         <div class="panel-body">
                            <form action="#" id="loginForm">
                               <div class="form-group">
