--- a/parkverlauf.html
+++ b/parkverlauf.html
@@ -49,7 +49,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-3">
-                  <div class="hpanel">
+                  <div class="hpanel animated-panel zoomIn">
                      <div class="panel-body">
                         <h4 class="text-center">Menü</h4>
                         <ul class="mailbox-list">
@@ -67,7 +67,7 @@
                   </div>
                </div>
                <div class="col-md-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -82,7 +82,7 @@
                 </div>
                </div>
                <div class="col-md-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -97,7 +97,7 @@
                 </div>
                </div>
                <div class="col-md-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -112,7 +112,7 @@
                 </div>
                </div>
                <div class="col-md-3 col-md-offset-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -127,7 +127,7 @@
                 </div>
                </div>
                <div class="col-md-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -142,7 +142,7 @@
                 </div>
                </div>
                <div class="col-md-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -157,7 +157,7 @@
                 </div>
                </div>
                <div class="col-md-3 col-md-offset-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -172,7 +172,7 @@
                 </div>
                </div>
                <div class="col-md-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -187,7 +187,7 @@
                 </div>
                </div>
                <div class="col-md-3">
-                <div class="hpanel hyellow">
+                <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
                             <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                </div>
-               <div class="col-lg-9 col-lg-offset-3 text-center">
+               <div class="col-lg-9 col-lg-offset-3 text-center animated-panel zoomIn">
                  <div class="btn-group">
                     <button type="button" class="btn btn-default"><i class="fa fa-chevron-left"></i></button>
                     <button class="btn btn-default active">1</button>
