--- a/recovery2.html
+++ b/recovery2.html
@@ -49,11 +49,11 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
-                 <div class="text-center m-b-md">
+                 <div class="text-center animated-panel zoomIn m-b-md">
                     <h3>Passwort-Wiederherstellung</h3>
                     <small>PAYUCA Konto</small>
                  </div>
-                  <div class="hpanel">
+                  <div class="hpanel animated-panel zoomIn">
                      <div class="panel-body">
                         <h4 class="m-b-md">Passwort-Wiederherstellen</h4>
                         <div class="row">
