--- a/register.html
+++ b/register.html
@@ -48,12 +48,12 @@
       <section id="register" class="bg-light agb">
          <div class="container">
             <div class="row">
-               <div class="text-center m-b-xl m-t-lg">
+               <div class="text-center animated-panel zoomIn m-b-xl m-t-lg">
                   <h3>PAYUCA Registrierung</h3>
                   <small>Smart Parking</small>
                </div>
                <div class="col-lg-12">
-                  <div class="hpanel m-b-xl">
+                  <div class="hpanel animated-panel zoomIn m-b-xl">
                      <div class="panel-body">
                         <form name="simpleForm" novalidate="" id="simpleForm" action="#" method="post">
                            <div class="text-center m-b-md" id="wizardControl">
