--- a/agb.html
+++ b/agb.html
@@ -49,7 +49,7 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
-                  <div class="hpanel blog-article-box">
+                  <div class="hpanel animated-panel zoomIn blog-article-box">
                      <div class="panel-heading">
                         <h4>AGB</h4>
                      </div>
