--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
-                  <div class="hpanel blog-article-box">
+                  <div class="hpanel animated-panel zoomIn blog-article-box">
                      <div class="panel-heading">
                         <h4>FAQ </h4>
                      </div>
@@ -69,7 +69,7 @@
             </div>
             <div class="row">
                <div class="col-lg-6">
-                  <div class="hpanel panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                  <div class="hpanel animated-panel zoomIn panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                      <div class="panel-body">
                         <h4 class="m-t-none m-b-none">General questions</h4>
                         <small class="text-muted">All general questions about our app.</small>
@@ -167,7 +167,7 @@
                   </div>
                </div>
                <div class="col-lg-6">
-                  <div class="hpanel panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
+                  <div class="hpanel animated-panel zoomIn panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
                      <div class="panel-body">
                         <h4 class="m-t-none m-b-none">Technical questions</h4>
                         <small class="text-muted">All technical questions about our app.</small>
