--- a/guthaben.html
+++ b/guthaben.html
@@ -49,7 +49,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-3">
-                  <div class="hpanel">
+                  <div class="hpanel animated-panel zoomIn">
                      <div class="panel-body">
                         <h4 class="text-center">Menü</h4>
                         <ul class="mailbox-list">
@@ -67,7 +67,7 @@
                   </div>
                </div>
                <div class="col-lg-9">
-                  <div class="hpanel hyellow">
+                  <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body text-center">
                       <h4>Dein Guthaben</h4>
                       <h2 class="text-success">73,50 €</h2>
@@ -76,7 +76,7 @@
                       </small>
                    </div>
                   </div>
-                  <div class="hpanel">
+                  <div class="hpanel animated-panel zoomIn">
                     <div class="panel-body text-center">
                       <h4 class="m-b-md text-success">Guthaben Aufladung</h4>
                       <p>ausgewählte Summe</p>
@@ -88,7 +88,7 @@
                       <div class="row m-t-lg">
                         <p class="m-b-md">Zahlungsmethode</p>
                         <div class="col-lg-4">
-                          <div class="hpanel">
+                          <div class="hpanel animated-panel zoomIn">
                               <div class="panel-body">
                                 <img src="images/landing/kreditkarte.png" alt="Kreditkarte" />
                                 <div class="radio">
@@ -101,7 +101,7 @@
                           </div>
                         </div>
                         <div class="col-lg-4">
-                          <div class="hpanel">
+                          <div class="hpanel animated-panel zoomIn">
                               <div class="panel-body">
                                 <img src="images/landing/pay-pal.png" alt="Paypal" />
                                 <div class="radio">
@@ -114,7 +114,7 @@
                           </div>
                         </div>
                         <div class="col-lg-4">
-                          <div class="hpanel">
+                          <div class="hpanel animated-panel zoomIn">
                               <div class="panel-body">
                                 <img src="images/landing/sofortUberweisung.png" alt="Sofort" />
                                 <div class="radio">
@@ -127,7 +127,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row text-center">
+                      <div class="row text-center animated-panel zoomIn">
                         <button class="btn btn-primary btn-lg " type="button">weiter <i class="fa fa-arrow-right"></i></button>
                       </div>
                    </div>
