--- a/profil.html
+++ b/profil.html
@@ -49,7 +49,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-3">
-                  <div class="hpanel">
+                  <div class="hpanel animated-panel zoomIn">
                      <div class="panel-body">
                         <h4 class="text-center">Menü</h4>
                         <ul class="mailbox-list">
@@ -67,7 +67,7 @@
                   </div>
                </div>
                <div class="col-lg-9">
-                  <div class="hpanel">
+                  <div class="hpanel animated-panel zoomIn">
                      <div class="panel-body">
                         <div class="row">
                           <div class="col-lg-6">
