--- a/recovery.html
+++ b/recovery.html
@@ -50,11 +50,11 @@
             <div class="login-container">
                <div class="row">
                   <div class="col-md-12">
-                     <div class="text-center m-b-md">
+                     <div class="text-center m-b-md animated-panel zoomIn">
                         <h3>Passwort-Wiederherstellung</h3>
                         <small>PAYUCA Konto</small>
                      </div>
-                     <div class="hpanel m-b-xl">
+                     <div class="hpanel animated-panel zoomIn m-b-xl">
                         <div class="panel-body">
                            <p>
                               Gib Deine E-Mail-Adresse ein und ein Passwort-Wiederherstellungslink wird Dir gesendet.
