--- a/search.html
+++ b/search.html
@@ -49,7 +49,7 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
-                  <div class="hpanel blog-article-box">
+                  <div class="hpanel animated-panel zoomIn blog-article-box">
                      <div class="panel-heading">
                         <h4>Search </h4>
                      </div>
@@ -69,7 +69,7 @@
             </div>
             <div class="row">
                <div class="col-lg-12">
-                  <div class="hpanel panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                  <div class="hpanel animated-panel zoomIn panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                      <div class="panel-body">
                         <h4 class="m-t-none m-b-none">Results</h4>
                         <small class="text-muted">All general questions about our app.</small>
@@ -99,7 +99,7 @@
             </div>
             <div class="row">
                <div class="col-lg-12">
-                  <div class="hpanel panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                  <div class="hpanel animated-panel zoomIn panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                      <div class="panel-body text-center">
                         <h3 class="m-t-none m-b-none">Haven't found what You're looking for?</h3>
                         <p>Feel free to submit a support ticket by clicking the button down below.</p>
