--- a/ticket.html
+++ b/ticket.html
@@ -52,7 +52,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-9">
-                  <div class="hpanel email-compose">
+                  <div class="hpanel animated-panel zoomIn email-compose">
                      <div class="panel-heading hbuilt">
                         <div class="p-xs h4">
                            New message
@@ -98,7 +98,7 @@
                   </div>
                </div>
                <div class="col-md-3">
-                  <div class="hpanel">
+                  <div class="hpanel animated-panel zoomInRight">
                      <div class="panel-body">
                         <h3>Info</h3>
                         <br/>
