--- a/profil.html
+++ b/profil.html
@@ -48,7 +48,7 @@
       <section id="profil" class="bg-light agb">
          <div class="container">
             <div class="row">
-               <div class="col-md-3">
+               <div class="col-lg-3">
                   <div class="hpanel animated-panel zoomIn">
                      <div class="panel-body">
                         <h4 class="text-center">Menü</h4>
