--- a/parkverlauf.html
+++ b/parkverlauf.html
@@ -48,7 +48,7 @@
       <section id="parkverlauf" class="bg-light agb">
          <div class="container">
             <div class="row">
-               <div class="col-md-3">
+               <div class="col-lg-3">
                   <div class="hpanel animated-panel zoomIn">
                      <div class="panel-body">
                         <h4 class="text-center">Menü</h4>
@@ -66,138 +66,57 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-3">
+               <div class="col-lg-9">
                 <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
+                            <h4 class="text-success m-b-md"><i class="fa fa-map-pin text-s"></i> Garage Gasometer
+                              <span class="pull-right"><i class="fa fa-money"></i> 2,00 €</span>
+                            </h4>
+                            <p><i class="fa fa-play"></i> 30.09.2017, 13:00</p>
+                            <p><i class="fa fa-stop"></i> 30.09.2017, 14:00</p>
+                            <h4 class="m-t-md"><i class="fa fa-car"></i> W7777H
+                              <span class="pull-right">
+                                <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
+                              </span>
+                            </h4>
                         </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
                     </div>
                 </div>
                </div>
-               <div class="col-md-3">
+               <div class="col-lg-9">
                 <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
+                            <h4 class="text-success m-b-md"><i class="fa fa-map-pin text-s"></i> Garage Gasometer
+                              <span class="pull-right">2,00 €</span>
+                            </h4>
+                            <p><i class="fa fa-play"></i> 30.09.2017, 13:00</p>
+                            <p><i class="fa fa-stop"></i> 30.09.2017, 14:00</p>
+                            <h4 class="m-t-md"><i class="fa fa-car"></i> W7777H
+                              <span class="pull-right">
+                                <a class="btn btn-primary2 btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
+                              </span>
+                            </h4>
                         </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
                     </div>
                 </div>
                </div>
-               <div class="col-md-3">
+               <div class="col-lg-9 col-lg-offset-3">
                 <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body">
                         <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
+                            <h4 class="text-success m-b-md"><i class="fa fa-map-pin text-s"></i> Garage Gasometer
+                              <span class="pull-right"><i class="fa fa-money"></i> 2,00 €</span>
+                            </h4>
+                            <p><i class="fa fa-play"></i> 30.09.2017, 13:00</p>
+                            <p><i class="fa fa-stop"></i> 30.09.2017, 14:00</p>
+                            <h4 class="m-t-md"><i class="fa fa-car"></i> W7777H
+                              <span class="pull-right">
+                                <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
+                              </span>
+                            </h4>
                         </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
-                    </div>
-                </div>
-               </div>
-               <div class="col-md-3 col-md-offset-3">
-                <div class="hpanel animated-panel zoomIn hyellow">
-                    <div class="panel-body">
-                        <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
-                        </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
-                    </div>
-                </div>
-               </div>
-               <div class="col-md-3">
-                <div class="hpanel animated-panel zoomIn hyellow">
-                    <div class="panel-body">
-                        <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
-                        </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
-                    </div>
-                </div>
-               </div>
-               <div class="col-md-3">
-                <div class="hpanel animated-panel zoomIn hyellow">
-                    <div class="panel-body">
-                        <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
-                        </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
-                    </div>
-                </div>
-               </div>
-               <div class="col-md-3 col-md-offset-3">
-                <div class="hpanel animated-panel zoomIn hyellow">
-                    <div class="panel-body">
-                        <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
-                        </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
-                    </div>
-                </div>
-               </div>
-               <div class="col-md-3">
-                <div class="hpanel animated-panel zoomIn hyellow">
-                    <div class="panel-body">
-                        <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
-                        </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
-                    </div>
-                </div>
-               </div>
-               <div class="col-md-3">
-                <div class="hpanel animated-panel zoomIn hyellow">
-                    <div class="panel-body">
-                        <div class="stats-title">
-                            <h4 class="text-success"><i class="fa fa-map-pin text-s"></i> Garage Gasometer</h4>
-                            <span><i class="fa fa-play"></i> 30.09.2017, 13:00</span>
-                            <br/>
-                            <span><i class="fa fa-stop"></i> 30.09.2017, 14:00</span>
-                            <h4><i class="fa fa-car"></i> W7777H</h4>
-                            <h4 class="m-t-n-xs"><i class="fa fa-money"></i> 2,00 €</h4>
-                        </div>
-                        <a class="btn btn-primary btn-xs btn-outline pull-right" href="ticket.html">Problem melden</a>
                     </div>
                 </div>
                </div>
