NFC-Chip page added, menus changed, filter for park history added.

--- a/guthaben.html
+++ b/guthaben.html
@@ -33,14 +33,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                <ul class="nav navbar-nav navbar-right">
-                  <li><a class="page-scroll" href="index.html">Home</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
-                  <li><a class="page-scroll" page-scroll href="standorte.html">Standorte</a></li>
-                  <li><a class="page-scroll" page-scroll href="partner.html">Partner</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
-                  <li><a href="login.html" class="navbar-brand">Log In</a></li>
+                  <li><a href="standorte.html">Home</a></li>
+                  <li class="active"><a href="guthaben.html">Guthaben</a></li>
+                  <li><a href="parkverlauf.html">Parkverlauf</a></li>
+                  <li><a href="gutschein.html">Gutschein</a></li>
+                  <li><a href="nfc.html">NFC-Chip</a></li>
+                  <li><a href="profil.html" class="navbar-brand">Djordje</a></li>
                </ul>
             </div>
          </div>
@@ -48,25 +46,7 @@
       <section id="guthaben" class="bg-light agb">
          <div class="container">
             <div class="row">
-               <div class="col-lg-3">
-                  <div class="hpanel animated-panel zoomIn">
-                     <div class="panel-body">
-                        <h4 class="text-center">Menü</h4>
-                        <ul class="mailbox-list">
-                           <li>
-                              <a href="profil.html"><i class="fa fa-user-circle-o"></i> Persönliche Daten</a>
-                           </li>
-                           <li class="active">
-                              <a href="guthaben.html"><i class="fa fa-database"></i> Guthaben</a>
-                           </li>
-                           <li>
-                              <a href="parkverlauf.html"><i class="fa fa-history"></i> Parkverlauf</a>
-                           </li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-9">
+               <div class="col-lg-12">
                   <div class="hpanel animated-panel zoomIn hyellow">
                     <div class="panel-body text-center">
                       <h4>Dein Guthaben</h4>
