--- a/nfc.html
+++ b/nfc.html
@@ -33,14 +33,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                <ul class="nav navbar-nav navbar-right">
-                  <li><a class="page-scroll" href="index.html">Home</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#sogehts">So geht's</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#pricing">Preis</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#team">Team</a></li>
-                  <li><a class="page-scroll" page-scroll href="standorte.html">Standorte</a></li>
-                  <li><a class="page-scroll" page-scroll href="partner.html">Partner</a></li>
-                  <li><a class="page-scroll" page-scroll href="index.html#kontakt">Kontakt</a></li>
-                  <li><a href="login.html" class="navbar-brand">Log In</a></li>
+                  <li><a href="standorte.html">Home</a></li>
+                  <li><a href="guthaben.html">Guthaben</a></li>
+                  <li><a href="parkverlauf.html">Parkverlauf</a></li>
+                  <li><a href="gutschein.html">Gutschein</a></li>
+                  <li class="active"><a href="nfc.html">NFC-Chip</a></li>
+                  <li><a href="profil.html" class="navbar-brand">Djordje</a></li>
                </ul>
             </div>
          </div>
@@ -61,8 +59,8 @@
                        <p class="m-b-lg">
                          Es werden einmalig € 2,70 von deinem Guthaben abgebucht. Der Chip wird per Post zugesandt.
                        </p>
-                       <button class="btn btn-primary m-b-md">NFC-Chip bestellen</button> <br/>
-                       <small>*Du musst Deine <a href="profil.html">Lieferdaten</a> ausfüllen, um einen NFC-Chip zu bestellen.</small>
+                       <button class="btn btn-primary m-b-lg">NFC-Chip bestellen</button> <br/>
+                       <p class="m-b-md"><small>*Du musst Deine <a href="profil.html">Lieferdaten</a> ausfüllen, um einen NFC-Chip zu bestellen.</small></p>
                      </div>
                   </div>
                </div>
