--- a/profil.html
+++ b/profil.html
@@ -101,8 +101,8 @@
                         <a class="btn btn-success btn-sm pull-right" href="#">Speichern</a>
                         <hr class="m-t-xxl m-b-lg">
                         <h4 class="m-b-md">Kennzeichen</h4>
-                        <div class="row">
-                           <div class="col-lg-6">
+                        <div class="row" id="kennzeichen">
+                           <div class="col-lg-6 m-b-md">
                               <label>Kennzeichen 1</label>
                               <div class="input-group">
                                  <input type="text" class="form-control" value="W7777H" id="" disabled name="kennzeichen">
@@ -118,8 +118,7 @@
                         </div>
                         <div class="row m-t-md">
                            <div class="form-group col-lg-6">
-                              <label>Kennzeichen 2</label> <br>
-                              <a class="btn btn-outline btn-primary"><i class="fa fa-plus-circle"></i> Hinzufügen </a>
+                              <button class="btn btn-outline btn-primary" id="add"><i class="fa fa-plus-circle"></i> Hinzufügen </button>
                            </div>
                         </div>
                         <hr class="m-t-lg">
@@ -261,6 +260,16 @@
                 $(this).hide();
             });
         });
+      </script>
+
+      <script>
+      $(function () {
+        var count = 1;
+        $('#add').on('click', function () {
+          count++;
+          $('<div class="col-lg-6 m-b-md"><label>Kennzeichen '+ count + '</label><div class="input-group"><input type="text" class="form-control" placeholder="W7777H" id="" disabled name="kennzeichen"><div class="input-group-btn"><button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button" aria-expanded="false"><span class="fa fa-cog"></span></button><ul class="dropdown-menu pull-right"><li><a href="">Bearbeiten</a></li><li><a href="">Entfernen</a></li></ul></div></div></div>').appendTo('#kennzeichen');
+        });
+      });
       </script>
 
       <script>
